# model-service

./: .gitignore  README.md  app.py  dockerfile  pyproject.toml  requirements.txt
.github/workflows/: release.yml
