[tool.poetry]
name = "model-service"
version = "0.0.10"
description = "Contains the wrapper service for the ML model."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "model_service"}]

[tool.poetry.dependencies]
python = "3.10.6"
model-training = {git = "https://github.com/remla23-team18/model-training.git", rev = "main"}
flask = "2.2.4"
flasgger = "0.9.4"
joblib = "^1.2.0"
scikit-learn = "^1.2.2"
flask-cors = "^3.0.10"
nltk = "^3.8.1"
prometheus-client = "^0.17.0"
psutil = "^5.9.5"
dvc-gs = "^2.22.1"
dvc = "^2.58.2"
google-cloud-storage = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
